# DNB-AI-Engineer-Agentic-Systems-460023356

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  compose.yaml  job_listing.json  pyproject.toml  pytest.ini  stages.json
.github/workflows/: ci.yaml
app/: cli.py  main.py  settings.py
app/agents/: base.py  compliance.py  coordinator.py  graph.py  market.py  portfolio.py  state.py  transactions.py  writer.py
app/api/: bench.py  customers.py  drift.py  errors.py  health.py  reviews.py  runs.py
app/drift/: monitor.py  stats.py
app/eval/: code.py  judge.py  runner.py
app/eval/datasets/: golden.jsonl
app/llm/: cost.py  provider.py
app/mcp/: client.py  errors.py  http_server.py
app/mcp/servers/compliance/: __main__.py
app/mcp/servers/customer/: __main__.py
app/mcp/servers/market/: __main__.py
app/memory/: database.py  embeddings.py  models.py  seeds.py
app/observability/: logging.py  metrics.py  otel.py
app/ui/: streamlit_app.py
configs/: models.yaml  otel-collector.yaml  prometheus.yaml
configs/grafana/dashboards/: dashboard.yaml  finsight.json
docs/: PRD.md
tests/: conftest.py
tests/fixtures/: customers.json
tests/fixtures/llm_cassettes/: compliance.json  compliance_revise.json  coordinator.json  default.json  judge.json  market.json  portfolio.json  transactions.json  writer.json
tests/integration/: conftest.py  test_bench.py  test_checkpoint_resume.py  test_compliance_loop.py  test_customers_api.py  test_drift.py  test_errors.py  test_evaluation.py  test_graph.py  test_health.py  test_mcp.py  test_models_db.py  test_observability.py  test_reviews_api.py  test_runs_api.py
tests/unit/: test_eval.py  test_stats.py
